# skeletone-pip

./: .gitignore  LICENSE  README.md  pyproject.toml  update.sh
skeletone/: cli.py  downgrade.py  help.py  init.py  patches.py  upgrade.py  versions.py
