[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skeletone"
version = "0.1.1"
dependencies = [
    "click",
    "GitPython",
    "rich"
]

[project.scripts]
skeletone = "skeletone.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["skeletone*"]