[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skeletone"
version = "0.1.5"
description = "CLI for services template for Python (FastAPI, SQLAlchemy, Alembic)"
readme = "README.md"
dependencies = [
    "click",
    "GitPython",
    "rich",
    "requests"
]

[project.scripts]
skeletone = "skeletone.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["skeletone*"]