[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skeletone"
version = "0.1.12"
description = "CLI for services template for Python (FastAPI, SQLAlchemy, Alembic)"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Zhaxybayev Daulet", email = "damelimm@gmail.com"}
]
dependencies = [
    "click",
    "GitPython",
    "rich",
    "requests"
]

[project-urls]
Homepage = "https://github.com/yoursteacup/skeletone-pip"

[project.scripts]
skeletone = "skeletone.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["skeletone*"]